--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -4,16 +4,16 @@ description = "Default layout"
 <html>
     <head>
         <meta charset="utf-8">
-        <title>October CMS - {{ this.page.title }}</title>
+        <title>BC - {{ this.page.title }}</title>
         <meta name="description" content="{{ this.page.meta_description }}">
         <meta name="title" content="{{ this.page.meta_title }}">
-        <meta name="author" content="OctoberCMS">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="generator" content="OctoberCMS">
-        <link rel="icon" type="image/png" href="{{ 'assets/images/october.png'|theme }}">
-        <link href="{{ 'assets/css/vendor.css'|theme }}" rel="stylesheet">
-        <link href="{{ 'assets/css/theme.css'|theme }}" rel="stylesheet">
-        {% styles %}
+
+        <link href="https://fonts.googleapis.com/css?family=Changa+One|Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="/themes/demo/assets/css/bc-293674f4a2.css"/>
+        <link rel="stylesheet" href="/themes/demo/assets/css/bc-khub.css"/>
+
+        <!--{% styles %}-->
     </head>
     <body>
 
@@ -31,13 +31,7 @@ description = "Default layout"
         <footer id="layout-footer">
             {% partial 'site/footer' %}
         </footer>
-
-        <!-- Scripts -->
-        <script src="{{ 'assets/vendor/jquery.js'|theme }}"></script>
-        <script src="{{ 'assets/vendor/bootstrap.js'|theme }}"></script>
-        <script src="{{ 'assets/javascript/app.js'|theme }}"></script>
         {% framework extras %}
         {% scripts %}
-
     </body>
 </html>
