--- a/themes/demo/partials/site/footer.htm
+++ b/themes/demo/partials/site/footer.htm
@@ -1,6 +1,47 @@
 <div id="footer">
-    <div class="container">
-        <hr />
-        <p class="muted credit">&copy; footer? footer.</p>
+    <br>
+    <hr>
+    <div class="row center-80pc">
+
+        <ul class="footer-links">
+            <li style="pointer-events: none">
+                <a href="/">
+                    <img alt="business comparison" id="footer-logo" src="/themes/demo/assets/images/logo.svg"/>
+                </a>
+            </li>
+            <li><a href="https://www.businesscomparison.com/">Home</a></li>
+            <li><a href="https://www.businesscomparison.com/about">About Us</a></li>
+            <li><a href="https://www.businesscomparison.com/contact-us">Contact Us</a></li>
+            <li><a href="https://www.businesscomparison.com/privacy-policy">Privacy</a></li>
+            <li><a href="https://www.businesscomparison.com/terms-and-conditions">T&C's</a></li>
+            <li><a href="https://www.businesscomparison.com/cookie-policy">Cookie Policy</a></li>
+            <li>
+                <ul class="footer-links social">
+                    <li style="float:right"><a href="https://www.facebook.com/businesscomparison" class="social-icon facebook last"></a></li>
+                    <li style="float:right"><a href="https://www.linkedin.com/company/businesscomparison-com" class="social-icon linkedin"></a></li>
+                    <li style="float:right"><a href="https://twitter.com/bizcomparison" class="social-icon twitter"></a></li>
+                    <li style="float:right"><a href="https://plus.google.com/+BusinessComparison" class="social-icon google"></a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <br>
+
+    <div class="row center-80pc">
+        <p>
+            Business Comparison Limited is an Appointed Representative of Digitonomy Limited which is authorised and regulated by the Financial Conduct Authority under firm reference number 690249. Digitonomy Limited is registered in England and Wales under company number 08385135. Registered office: Steam Mill Business Centre, Steam Mill Street, Chester, Cheshire, CH3 5AN.
+        </p>
+        <p>
+            Business Comparison Limited is registered in England and Wales under company number 10257077 (firm reference number 764767).  Registered office: Steam Mill Business Centre, Steam Mill Street, Chester, Cheshire, CH3 5AN.  Licenced by the Information Commissioners Office, (registration number ZA213954).
+        </p>
+
+        <p>
+            THINK CAREFULLY BEFORE SECURING OTHER DEBTS AGAINST YOUR HOME. YOUR HOME MAY BE REPOSSESSED IF YOU DO NOT KEEP UP REPAYMENTS ON A MORTGAGE OR ANY OTHER LOAN SECURED ON IT
+        </p>
+        <p>
+            Business Comparison is a credit broker not a lender, and introduces borrowers and lenders for the purposes of entering into different types of loan agreements, including short-term unsecured loan agreements. Business Comparison Limited does not charge customers a fee for using its broker services, but it receives a commission from lenders or other brokers if a customer enters into a consumer credit agreement with a lender or broker following an introduction through this website.
+        </p>
+
     </div>
 </div>
