--- a/themes/demo/assets/css/bc-khub.css
+++ b/themes/demo/assets/css/bc-khub.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F7F7F7;
+    overflow-x: hidden;
 }
 
 #welcome-header {
@@ -9,6 +9,10 @@ body {
 .search-group {
     width: 45%;
     margin: 40px auto;
+}
+
+#search-box{
+    height: 60px;
 }
 
 .top-container{
@@ -25,13 +29,14 @@ p {
 h3 {
     margin-top: 40px;
     font-family: "Roboto", "sans-serif";
-    font-size: 24pt;
+    font-size: 20pt;
     font-weight: 900;
 }
 
 h4 {
     font-family: "Roboto", "sans-serif";
-    font-size: 18pt;
+    font-size: 16pt;
+    font-weight: 900;
 }
 
 .category-desc{
@@ -41,7 +46,7 @@ h4 {
 .category-icon {
     width: 120px;
     height: 120px;
-    margin-bottom: 20px;
+    margin: 30px auto 20px auto;
 }
 
 .center-80pc{
@@ -52,6 +57,7 @@ h4 {
 .categories {
     margin-top: 50px;
     color: #505050;
+    background-color: #F7F7F7;
 }
 
 .category-btn {
@@ -60,4 +66,71 @@ h4 {
     border-radius: 20px;
     border: 1px solid #505050;
     font-weight: bold;
+    margin-bottom: 30px;
+}
+
+li.recent-topic {
+    display: block;
+    margin: 10px 0 10px -17px;
+}
+
+li.recent-topic:before {
+    content: "\e080";
+    font-family: 'Glyphicons Halflings', 'sans-serif';
+    font-size: 9px;
+    float: left;
+    margin-top: 4px;
+    margin-left: -17px;
+}
+
+li.pink-bullet:before {
+    color: #f44165;
+}
+
+li.green-bullet:before {
+    color: #4ac6c5;
+}
+
+li.yellow-bullet:before {
+    color: #f6ae01;
+}
+
+#footer-logo {
+    height: 32px;
+}
+
+.footer-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-links li {
+    display: inline;
+    margin: 0 20px;
+}
+
+.social {
+    display: inline;
+}
+
+.social li{
+    margin: 0 10px;
+}
+
+.social-icon {
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    border: 1px solid #4ac6c5;
+    margin-right: 12px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 56px 56px;
+    background-image: url(/themes/demo/assets/images/social-sprite.png);
+    transition: background-image .25s linear
+}
+
+.social-icon:hover {
+    background-image: url(/themes/demo/assets/images/social-sprite-hover.png)
 }
