--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -10,9 +10,9 @@ description = "Default layout"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Changa+One|Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!--need this for glyphicons-->
         <link rel="stylesheet" href="/themes/demo/assets/css/bc-293674f4a2.css"/>
         <link rel="stylesheet" href="/themes/demo/assets/css/bc-khub.css"/>
-
         <!--{% styles %}-->
     </head>
     <body>
