--- a/themes/demo/partials/site/header.htm
+++ b/themes/demo/partials/site/header.htm
@@ -1,9 +1,9 @@
 <section id="bc_header">
     <div class="container">
-        <span class="row" id="header-top-row">
+        <div class="row" id="header-top-row">
             <div class="col-xs-12 col-md-7 col-lg-8">
                 <div class="header-container">
-                    <a href="/" id="header-logo-link">
+                    <a href="https://www.businesscomparison.com/" id="header-logo-link">
                         <img alt="business comparison" id="header-logo" src="/themes/demo/assets/images/logo.svg"/>
                     </a>
                     <span class="tagline">
@@ -12,7 +12,6 @@
                     </span>
                 </div>
             </div>
-            <div class="col-xs-2 visible-xs visible-sm"></div>
             <div class="hidden-xs hidden-sm col-md-5 col-lg-4">
                 <div class="award-container full-height">
                     <img src="/themes/demo/assets/images/sme.png" alt="sme"/>
@@ -20,7 +19,6 @@
                 <div class="award-container">
                     <img src="/themes/demo/assets/images/oba-winner.png" alt="oba" style="max-width: 80px"/>
                 </div>
-                <!-- <span class="pull-right" style="font-variant: small-caps; line-height: 52px;">shortlisted for</span> -->
             </div>
             <button type="button" id="mobile-menu-toggle" class="hidden-md hidden-lg">
                 <span class="icon-bar"></span>
@@ -28,21 +26,22 @@
                 <span class="icon-bar"></span>
                 <span>MENU</span>
             </button>
-        </span>
+        </div>
     </div>
 </section>
-<ul class="nav navbar-nav">
-    <li>Home</li>
-    <li class="v-divider"></li>
-    <li>Business Finance</li>
-    <li class="v-divider"></li>
-    <li>Bank Accounts</li>
-    <li class="v-divider"></li>
-    <li>foo</li>
-    <li class="v-divider"></li>
-    <li>bar</li>
-    <li class="v-divider"></li>
-    <li>foobar</li>
-</ul>
-<br>
-<hr>
+
+<div class="text-center">
+    <ul class="nav">
+        <li>Home</li>
+        <li class="v-divider"></li>
+        <li>Business Finance</li>
+        <li class="v-divider"></li>
+        <li>Bank Accounts</li>
+        <li class="v-divider"></li>
+        <li>foo</li>
+        <li class="v-divider"></li>
+        <li>bar</li>
+        <li class="v-divider"></li>
+        <li>foobar</li>
+    </ul>
+</div>
