Partway through selecting all valid posts from db

--- a/themes/bc/partials/site/footer.htm
+++ b/themes/bc/partials/site/footer.htm
@@ -10,7 +10,7 @@
             </li>
             <li><a href="https://www.businesscomparison.com/">Home</a></li>
             <li><a href="https://www.businesscomparison.com/about">About Us</a></li>
-            <li><a href="https://www.businesscomparison.com/contact-us">Contact Us</a></li>
+            <li><a href="https://www.businesscomparis/contact-us">Contact Us</a></li>
             <li><a href="https://www.businesscomparison.com/privacy-policy">Privacy</a></li>
             <li><a href="https://www.businesscomparison.com/terms-and-conditions">T&C's</a></li>
             <li><a href="https://www.businesscomparison.com/cookie-policy">Cookie Policy</a></li>
