--- a/themes/bc/assets/css/bc-khub.css
+++ b/themes/bc/assets/css/bc-khub.css
@@ -6,7 +6,8 @@ body {
     margin-top: 40px;
 }
 
-#category-title {
+#category-header {
+    font-size: 32pt;
     margin: 30px 0;
 }
 
@@ -101,12 +102,12 @@ img.stakeholders {
     margin-bottom: 30px;
 }
 
-li.recent-topic {
+li.arrow-bullet, .arrow-bullet {
     display: block;
     margin: 10px 0 10px -17px;
 }
 
-li.recent-topic:before {
+li.arrow-bullet:before, .arrow-bullet:before {
     content: "\e080";
     font-family: 'Glyphicons Halflings', 'sans-serif';
     font-size: 9px;
@@ -115,15 +116,15 @@ li.recent-topic:before {
     margin-left: -17px;
 }
 
-li.pink-bullet:before {
+li.pink-bullet:before, .pink-bullet:before {
     color: #f44165;
 }
 
-li.green-bullet:before {
+li.green-bullet:before, .green-bullet:before {
     color: #4ac6c5;
 }
 
-li.yellow-bullet:before {
+li.yellow-bullet:before, .yellow-bullet:before {
     color: #f6ae01;
 }
 
@@ -203,9 +204,6 @@ li.yellow-bullet:before {
     left: -35px;
     color:#D9230F;
 }
-
-
-
 
 
 /* Live search */
@@ -385,7 +383,38 @@ body.safari #live-search .input label {
     #live-search #s {
         width: 100%;
     }
+
     #live-search #searchsubmit {
         display: none;
     }
+}
+
+
+
+
+a.current-path {
+    color: #9c9c9c;
+}
+
+span.current-path {
+    color: #4ac6c5;
+}
+
+
+.current-path {
+     font-size: 10pt;
+     margin: 15px 2px;
+ }
+
+
+.post-list {
+    color: red;
+}
+
+.info {
+    color: blue;
+}
+
+.excerpt {
+    color: green;
 }
