Search bar styled, need to remove empty no results message

--- a/themes/bc/assets/css/bc-khub.css
+++ b/themes/bc/assets/css/bc-khub.css
@@ -86,7 +86,7 @@ img.stakeholders {
 }
 
 .categories {
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     color: #505050;
     background-color: #F7F7F7;
 }
@@ -177,216 +177,6 @@ li.yellow-bullet:before, .yellow-bullet:before {
     display: inline;
     padding: 30px;
 }
-
-
-
-
-#custom-search-input {
-    width: 50%;
-    margin: 40px auto;
-}
-
-#custom-search-input #search-box{
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-}
-
-#search-box {
-    padding: 26px;
-}
-
-#search-btn {
-    border: 0;
-    background: none;
-    left: -35px;
-    color:#D9230F;
-}
-
-
-/* Live search */
-/* = Live Search
--------------------------------------------------------------- */
-#live-search {
-    padding: 45px 0 60px;
-}
-
-#live-search #searchform {
-    max-width: 750px;
-    width: 100%;
-    background: #fff;
-    background-clip: padding-box;
-    border-radius: 5px;
-    margin: 0 auto;
-    border: 1px solid #d7d7d7;
-}
-
-#live-search .input {
-    position: relative;
-    display: inline-flex;
-    margin: 0;
-    width: 100%;
-}
-
-#live-search .input label {
-    color: #A9A9A9;
-    display: inline-block;
-    left: 26px;
-    position: absolute;
-    top: 20px;
-    z-index: 1;
-    text-transform: none;
-    cursor: text;
-    font-size: 16px;
-}
-
-body.safari #live-search .input label {
-    top: 24px;
-}
-
-#live-search .input label.focus {
-    color: #ccc;
-}
-
-#live-search .input label.has-text {
-    display: none;
-}
-
-#live-search #s {
-    float: left;
-    width: 89%;
-    background: none;
-    color: #595959;
-    font-size: 16px;
-    padding: 20px 0 20px 25px;
-    border: none;
-    box-shadow: none;
-}
-
-#live-search #s.loading {
-    background: url(images/loader-light.gif) no-repeat right 30px;
-}
-
-#live-search #searchsubmit {
-    position: absolute;
-    font-family: 'FontAwesome';
-    background-color: transparent;
-    background-repeat: no-repeat;
-    float: right;
-    margin: 8px 15px 0 0;
-    padding: 9px 18px 9px 34px;
-    right: 0;
-    border: none;
-    height: 48px;
-    width: 32px;
-    min-width: 32px;
-    border: none;
-    cursor: pointer;
-    color: #bbb !important;
-    background-color: transparent !important;
-    font-size: 20px !important;
-    text-shadow: none !important;
-    clear: none !important;
-    line-height: initial;
-    background-clip: padding-box;
-    border-radius: 0 !important;
-    border: 0;
-    z-index: 100;
-}
-
-#live-search #searchsubmit:hover {
-    background-color: transparent;
-    color: #aaa !important;
-    border: transparent !important;
-}
-
-#search-wrap {
-    position: relative;
-}
-
-#search-result {
-    position: absolute;
-    background: #fff;
-    list-style: none;
-    font-size: 13px;
-    top: -20px;
-    padding-top: 20px;
-    left: -1px;
-    margin: 0;
-    border: 1px solid #d7d7d7;
-    z-index: 5;
-    border-top: none;
-    -webkit-border-bottom-right-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-radius-bottomright: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    width: 750px;
-    max-height: 750px;
-}
-
-#search-result li {
-    margin: 0;
-    border-bottom: 1px solid #f4f4f4;
-    transition: all 0.2s linear;
-}
-
-#search-result li:last-child {
-    margin: 0;
-    border-bottom: none;
-}
-
-#search-result li.no-results {
-    display: block;
-    color: #646464;
-    padding: 15px 15px 20px 25px;
-    font-size: 14px;
-    border: none;
-}
-
-#search-result a {
-    display: block;
-    color: #646464;
-    padding: 15px 15px 15px 25px;
-    font-size: 14px;
-    border: none;
-}
-
-#search-result a:hover {
-    text-decoration: none;
-    background: #F5F5F5;
-    border: none;
-}
-
-#search-result a i,
-#search-result li.no-results i {
-    display: inline-block;
-    margin-right: 10px;
-    text-align: center;
-    width: 15px;
-    color: #888;
-}
-
-#search-result img {
-    vertical-align: middle;
-    margin: 0 10px 0 0;
-}
-
-#search-result .nothing-here {
-    padding: 0 5px;
-}
-
-@media screen and (max-width: 480px) {
-    #live-search #s {
-        width: 100%;
-    }
-
-    #live-search #searchsubmit {
-        display: none;
-    }
-}
-
 
 a.current-path {
     color: #9c9c9c;
