Moved script tags and some tidying

--- a/themes/bc/layouts/default.htm
+++ b/themes/bc/layouts/default.htm
@@ -10,10 +10,12 @@ description = "Default layout"
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Changa+One|Roboto" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!--need this for glyphicons-->
-        <link rel="stylesheet" href="/themes/bc/assets/css/bc-293674f4a2.css"/>
-        <link rel="stylesheet" href="/themes/bc/assets/css/bc-khub.css"/>
-        <!--{% styles %}-->
+
+        <link rel="stylesheet" href="https://www.businesscomparison.com/build/css/bc-293674f4a2.css"/>  <!-- BC standard stylesheet -->
+        <link rel="stylesheet" href="/themes/bc/assets/css/bc-khub.css"/> <!-- Knowledge Hub specific -->
+        <link rel="stylesheet" href="/themes/bc/assets/css/sitesearch-override.css"/>
     </head>
     <body>
 
