--- a/themes/bc/assets/css/sitesearch-override.css
+++ b/themes/bc/assets/css/sitesearch-override.css
@@ -197,6 +197,7 @@ div.ss-search-form__input input {
     border: none;
     border-radius: 5px;
     background-color: #f0f0f0;
+    outline:none;
 }
 
 div.ss-search-form__input button {
