--- a/themes/bc/partials/searchresults/content.htm
+++ b/themes/bc/partials/searchresults/content.htm
@@ -1,19 +1,13 @@
-<h4 class="ss-result__title">
-    <a href="{{ result.url }}">{{ result.title | raw }}</a>
-    {% if __SELF__.showProviderBadge %}
-        <span class="ss-result__badge">
-            {{ result.provider }}
-        </span>
-    {% endif %}
+{# Some results contain meta information.     #}
+{# You can access it using result.meta.       #}
+{# To find out from which plugin the result   #}
+{# was returned you can use result.identifier #}
+{# Some results contain the original model.   #}
+{# You can access it using result.model       #}
 
-    {# Some results contain meta information.     #}
-    {# You can access it using result.meta.       #}
-    {# To find out from which plugin the result   #}
-    {# was returned you can use result.identifier #}
-    {# Some results contain the original model.   #}
-    {# You can access it using result.model       #}
-</h4>
 
+<h2><a class="article-title" href="{{ result.url }}">{{ result.title | raw }}</a></h2>/khub/array[slug][cat]/article
+<p>{{ result.model }}</p>
 <p class="ss-result__text">
     {{ result.excerpt | raw }}
 </p>
