Search results returning category too - can be further modified also

--- a/themes/bc/partials/searchresults/content.htm
+++ b/themes/bc/partials/searchresults/content.htm
@@ -6,8 +6,8 @@
 {# You can access it using result.model       #}
 
 
-<h2><a class="article-title" href="{{ result.url }}">{{ result.title | raw }}</a></h2>/khub/array[slug][cat]/article
-<p>{{ result.model }}</p>
+<h2><a class="article-title" href="{{ result.url }}">{{ result.title | raw }}</a></h2>
+{#<p>{{ result.model }}</p>#}
 <p class="ss-result__text">
     {{ result.excerpt | raw }}
 </p>
