About to start proper styling

--- a/themes/bc/assets/css/bc-khub.css
+++ b/themes/bc/assets/css/bc-khub.css
@@ -2,16 +2,18 @@ body {
     overflow-x: hidden;
 }
 
-#welcome-header {
-    margin-top: 40px;
+h1#welcome-header {
+    padding-top: 60px;
+    margin-top: 0;
+    font-size: 42px;
+    letter-spacing: 1px;
 }
+
 
 #category-header {
     font-size: 32pt;
     margin: 30px 0;
 }
-
-
 
 .top-container{
     width: 100%;
@@ -20,6 +22,19 @@ body {
     color: #FFFFFF;
     border-bottom: solid #4AC6C5;
 }
+
+div.top-container.text-center.homepage{
+    background-image: url("/themes/bc/assets/images/bc_building-background.png");
+    background-repeat: no-repeat;
+    background-position: 540px bottom;
+}
+
+div.top-container.text-center.homepage p {
+    font-weight: 300;
+    letter-spacing: 1px;
+    font-size: 19px;
+}
+
 
 p {
     font-family: "Roboto", "sans-serif";
@@ -44,9 +59,74 @@ h4 {
 }
 
 .category-icon {
+    max-height: 60px;
+    max-width: 60px;
+    line-height: 120px;
+}
+
+.circle {
     width: 120px;
     height: 120px;
-    margin: 30px auto 20px auto;
+    -webkit-border-radius: 60px;
+    -moz-border-radius: 60px;
+    border-radius: 60px;
+    margin: 25px auto;
+}
+
+.accounting-circle {
+    background-color: #F44165;
+    background-image: url("/themes/bc/assets/images/accounting-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.business-growth-circle {
+    background-color: #48C6C5;
+    background-image: url("/themes/bc/assets/images/business-growth-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.client-customers-circle {
+    background-color: #f6af01;
+    background-image: url("/themes/bc/assets/images/client-customers-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.legal-circle {
+    background-color: #ff6600;
+    background-image: url("/themes/bc/assets/images/legal-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.marketing-sales-circle {
+    background-color: #4a90e2;
+    background-image: url("/themes/bc/assets/images/marketing-sales-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.technology-circle {
+    background-color: #9013fe;
+    background-image: url("/themes/bc/assets/images/technology-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.finance-funding-circle {
+    background-color: #009595;
+    background-image: url("/themes/bc/assets/images/finance-funding-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.stakeholders-circle {
+    background-color: #8b572a;
+    background-image: url("/themes/bc/assets/images/stakeholders-icon.png");
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .center-80pc{
@@ -55,7 +135,7 @@ h4 {
 }
 
 .categories {
-    /*margin-top: 50px;*/
+    padding-top: 5px;
     color: #505050;
     background-color: #F7F7F7;
 }
@@ -63,6 +143,8 @@ h4 {
 .category-btn {
     margin-top: 10px;
     padding: 10px 15px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
     border-radius: 20px;
     border: 1px solid #505050;
     font-weight: bold;
