--- a/themes/bc/layouts/default.htm
+++ b/themes/bc/layouts/default.htm
@@ -9,7 +9,7 @@ description = "Default layout"
         <meta name="title" content="{{ this.page.meta_title }}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="https://fonts.googleapis.com/css?family=Changa+One|Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Changa+One|Roboto:300,400" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!--need this for glyphicons-->
 
