Part-styled, recent knowledge is functioning

--- a/themes/bc/partials/site/header.htm
+++ b/themes/bc/partials/site/header.htm
@@ -1,3 +1,17 @@
+<style>
+    .nav {
+        list-style: none;
+        background-color: #15A09F;
+        border-top: solid #4AC6C5;
+        height: 40px;
+    }
+
+    .nav li {
+        display: inline;
+        padding: 0 30px;
+    }
+</style>
+
 <section id="bc_header">
     <div class="container">
         <div class="row" id="header-top-row">
