--- a/themes/bc/assets/css/knowledge-hub.css
+++ b/themes/bc/assets/css/knowledge-hub.css
@@ -1,5 +1,6 @@
 body {
     overflow-x: hidden;
+    font-family: "Roboto", "sans-serif";
 }
 
 p {
@@ -159,13 +160,14 @@ h3.homepage {
 /* ----- Recent Knowledge ----- */
 
 h4.recent-knowledge {
-    margin-top: 30px;
+    margin: 30px 0 20px;
     font-weight: 700;
 }
 
 li.arrow-bullet, .arrow-bullet {
     display: block;
     margin: 10px 0 10px -23px;
+    font-size: 14px;
 }
 
 li.arrow-bullet:before, .arrow-bullet:before {
