Re-style complete

--- a/themes/bc/assets/css/knowledge-hub.css
+++ b/themes/bc/assets/css/knowledge-hub.css
@@ -58,13 +58,18 @@ h4 {
     margin: 0 5px;
 }
 
-h1.article-title a{
+h1.article-title, h1.article-title a, h2.article-title, h2.article-title a{
     color: #4ac6c5;
+    margin-bottom: 20px;
 }
 
-h1.article-title a:hover{
+h1.article-title a:hover, h2.article-title a:hover{
     color: #3f8b8a;
     text-decoration: none;
+}
+
+.article-title.result-article {
+    margin-bottom: 10px;
 }
 
 .excerpt {
@@ -80,6 +85,14 @@ hr.sidebar {
     margin: 15px 0;
 }
 
+h3.related-article {
+    margin: 50px 0 30px 0;
+}
+
+div.related-article {
+    background-color: #f5f5f5;
+    padding: 10px 20px;
+}
 
 /* ----- Homepage ----- */
 
