--- a/themes/bc/partials/searchresults/searchresult.htm
+++ b/themes/bc/partials/searchresults/searchresult.htm
@@ -1,9 +1,6 @@
-<div class="ss-result">
-    {% if result.thumb %}
-        {% partial __SELF__ ~ '::thumbnail' result = result %}
-    {% endif %}
-    <div class="ss-result__content">
+<div class="row">
+    <div class="col-md-12">
         {% partial __SELF__ ~ '::content' result = result %}
+        <hr/>
     </div>
-    <hr/>
 </div>
