--- a/themes/bc/layouts/default.htm
+++ b/themes/bc/layouts/default.htm
@@ -13,6 +13,7 @@ description = "Default layout"
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!--need this for glyphicons-->
 
+        <link rel="stylesheet" href="/themes/bc/assets/css/bc-293674f4a2.css"/>  <!-- BC standard stylesheet offline -->
         <link rel="stylesheet" href="https://www.businesscomparison.com/build/css/bc-293674f4a2.css"/>  <!-- BC standard stylesheet -->
         <link rel="stylesheet" href="/themes/bc/assets/css/knowledge-hub.css"/> <!-- Knowledge Hub specific -->
         <link rel="stylesheet" href="/themes/bc/assets/css/sitesearch-override.css"/>
